// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card and CardStack Model adds a card to the CardStack 1`] = `
Object {
  "cards": Array [
    Object {
      "categories": Array [],
      "cost": Object {
        "kind": "Money",
        "value": 0,
      },
      "description": "",
      "effects": Array [],
      "id": "1",
      "isPlayed": false,
      "kind": "Normal",
      "name": "Card 1",
      "shop": "Neutral",
      "uniqid": "1",
    },
    Object {
      "categories": Array [],
      "cost": Object {
        "kind": "Money",
        "value": 0,
      },
      "description": "",
      "effects": Array [],
      "id": "2",
      "isPlayed": false,
      "kind": "Normal",
      "name": "Card 2",
      "shop": "Neutral",
      "uniqid": "2",
    },
  ],
}
`;

exports[`Card and CardStack Model creates a Card 1`] = `
Object {
  "categories": Array [],
  "cost": Object {
    "kind": "Money",
    "value": 0,
  },
  "description": "",
  "effects": Array [],
  "id": "1",
  "isPlayed": false,
  "kind": "Normal",
  "name": "Card 1",
  "shop": "Neutral",
  "uniqid": "1",
}
`;

exports[`Card and CardStack Model creates a CardStack 1`] = `
Object {
  "cards": Array [
    Object {
      "categories": Array [],
      "cost": Object {
        "kind": "Money",
        "value": 0,
      },
      "description": "",
      "effects": Array [],
      "id": "1",
      "isPlayed": false,
      "kind": "Normal",
      "name": "Card 1",
      "shop": "Neutral",
      "uniqid": "1",
    },
  ],
}
`;

exports[`Card and CardStack Model removes a card from the CardStack 1`] = `
Object {
  "cards": Array [],
}
`;
